--- a/style.css
+++ b/style.css
@@ -1,24 +1,18 @@
 body {
-    font-size: Verdana, Arial, sans-serif;
-}
-h1 {
-    color: red;
-    background-color: #87ceeb;
-}
-h1:hover{
-    color: #FFA500;
-    transition: all 700ms ease-in-out;
-    -moz-transition: all 700 ms ease-in-out;
-}
-h2 {
+    font-family: Verdana, Arial, sans-serif;
+  }
+  h1 {
+    color: white;
+    background-color: black;
+  }
+  h1.clicked {
+      color: #FFA500;
+      background-color: navy;
+  }
+  h2 {
     color: green;
-    margin-left: 20px;
-}
-h2:hover{
-    background-color: #000000;
-    transition: all 700ms ease-in-out;
-    -moz-transition: all 700ms ease-in-out;
-}
-p {
-    margin-left: 240px;
-}
+    margin-left: 40px;
+  }
+  h2.clicked {
+      background-color: red;
+  }
